--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Mabel Obochi",
   "license": "MIT",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1"
   },
