passport and passport auth

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT = 2580
 MONGO_URI = mongodb+srv://msmabel23:1234@cluster0.dpjickq.mongodb.net/StoryApp
+GOOGLE_CLIENT_ID = 463204497459-kugdd8idm3jjjhjdjopebgr7i4e2ksva.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
